--- a/css-position.html
+++ b/css-position.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang ="hu">
 <head>
+  <link rel="stylesheet" type="text/css" href="css-position.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>test</title>
 </head>
 <body>
-  <p>Text</p>
-<p>Text</p>
-<a href="">Link</a>
-<a href="">Link</a>
+<<div class="container">
+  <div id="box-01" class="box">#box-01</div>
+  <div id="box-02" class="box">#box-02</div>
+  <div id="box-03" class="box">#box-03</div>
+  <div id="box-04" class="box">#box-04</div>
+</div>
 </body>
 </html>
