--- a/css-position.html
+++ b/css-position.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <<div class="container">
-  <div id="box-01" class="box">#box-01</div>
-  <div id="box-02" class="box">#box-02</div>
-  <div id="box-03" class="box">#box-03</div>
-  <div id="box-04" class="box">#box-04</div>
+  <div id="box-01" class="box">header</div>
+  <div id="box-02" class="box">main</div>
+  <div id="box-03" class="box">aside</div>
+  <div id="box-04" class="box">footer</div>
 </div>
 </body>
 </html>
